--- a/cmake/ser4cppConfig.cmake.in
+++ b/cmake/ser4cppConfig.cmake.in
@@ -1,4 +1,4 @@
 @PACKAGE_INIT@
 
-include("${CMAKE_INSTALL_PREFIX}/lib/cmake/ser4cpp/ser4cppTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/ser4cppTargets.cmake")
 check_required_components("@PROJECT_NAME@")
